--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         
-        <p><img src ="/IMG_1520.jpg" height=100 alt = "my img"><b><h1>Arjun Gupta</h1></b>
+        <p><img src ="IMG_1520.jpg" height=100 alt = "my img"><b><h1>Arjun Gupta</h1></b>
     80575658207 | ajngupta71@gmail.com </p>
     </header>
     <main>
